--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.capg</groupId>
-  <artifactId>srbm</artifactId>
+  <groupId>capg</groupId>
+  <artifactId>srbms</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>srbm</name>
+  <name>srbms</name>
   <url>http://www.example.com</url>
 
   <properties>
